--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "jogo-da-velha",
   "version": "0.0.0",
+  "engines": {
+    "node": "14.20.1",
+    "npm": "6.14.17"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
