--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "jogo-da-velha",
-  "version": "0.0.0"
-  },
+  "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "node serve.js",
